# twin_search

./: CMakeLists.txt  ExampleToolchain.cmake  README.md  conanfile.txt
include/TwinSearch/: random_hypergraph_generators.hpp  twin_search.hpp
include/twin_search/: factor_graph.hpp  hypergraph.hpp  projected_graph.hpp  utils.hpp
src/: CMakeLists.txt
src/TwinSearch/: CMakeLists.txt  projected_graph.cpp  random_hypergraph_generators.cpp  twin_search.cpp
src/twin_search/: count_twins_random.cpp  exact_mates.cpp  exhaustive_search_projections.cpp  factor_graph.cpp  hypergraph.cpp  projected_graph.cpp  real_data_twins.cpp  twin_search.cpp  utils.cpp
tests/: CMakeLists.txt  test_chung_lu_hypergraph.cpp  test_factor_graph.cpp  test_hypergraph.cpp  test_hypergraphs.cpp  test_projected_graph.cpp  test_random_hypergraph_generators.cpp  test_twin_search.cpp  test_utils.cpp
